fix role badge flickering due to busted animation

--- a/src/components/role-badge.css
+++ b/src/components/role-badge.css
@@ -17,6 +17,7 @@
   &:active {
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.45);
   }
+
   & .role-badge-menu__avatar {
     position: absolute;
     left: 0;
@@ -24,10 +25,13 @@
     right: 0;
     bottom: 0;
     opacity: 0;
-    animation-name: fade-in;
-    animation-duration: 0.2s;
-    animation-fill-mode: forwards;
   }
+
+  & .role-badge-menu__avatar--loaded {
+    opacity: 1;
+    transition: opacity 0.2s ease-in;
+  }
+
   & .role-badge-menu__generic-icon-container {
     width: 100%;
     height: 100%;
@@ -47,14 +51,5 @@
     height: 40px;
     flex: 0 0 40px;
     opacity: 0.8;
-  }
-}
-
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
   }
 }
